--- a/stocks/templates/stocks/stock_view.html
+++ b/stocks/templates/stocks/stock_view.html
@@ -43,6 +43,7 @@
       </form>
       <div>{{ data|safe }}</div>
       <div>{{ chart|safe }}</div>
+      <h3>Predicted Next Price: {{ predicted_price }}</h3>
     </div>
   </body>
 </html>
